static/archive.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

*:not(dialog) {
  margin: 0;
}

html {
  font-family: Charter, "Bitstream Charter", "Sitka Text", Cambria, serif;
  font-weight: normal;
  font-size: 18px;
  line-height: 1.5;
}

body {
  padding: 1em;
  max-width: 40em;
  width: 100%;
  margin: auto;
  -webkit-font-smoothing: antialiased;
  overflow-x: hidden;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
  margin: 1rem 0;
}

blockquote {
  margin: 1rem 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
  line-height: calc(1em + 0.5rem);
  margin: 1rem 0;
}

h1 {
  margin: 2rem 0;
}

h2 {
  margin: 1.6rem 0;
}

h3 {
  margin: 1.2rem 0;
}

code {
  font-family: ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas, "DejaVu Sans Mono", monospace;
  font-weight: normal;
  font-size: 0.9em;
}

.katex-display > .katex {
  overflow: auto hidden;
  scrollbar-width: thin;
}

.katex-display .tag {
  user-select: none;
}

.katex-display.overflow,
.katex-display.overflow > .katex {
  text-align: left;
}

.katex-display.overflow .katex-html::after {
  content: "\200b";
  padding-right: calc(var(--tag-size) + 0.4em);
}

.katex-display.overflow .katex-html {
  padding-left: var(--offset);
}

blockquote {
  padding: 0.6rem 1rem;
  background-color: whitesmoke;
  border-left: 5px solid lightgray;
}

blockquote :first-child {
  margin-top: 0;
}

blockquote :last-child {
  margin-bottom: 0;
}

hr {
  color: whitesmoke;
  margin: 2em 0;
}

